# CHVBadge_16

Defcon SDK/default/: CHV.p  Defcon.p  Rapid7.p  badge_default.amx  badge_default.p
Defcon SDK/doc/: README.txt  Specialized Solutions LLC License Agreement.txt  USB Protocol.txt
Defcon SDK/doc/Misc/: PAWN for notepad++.xml
Defcon SDK/doc/Native SDK/: README.txt
Defcon SDK/doc/Native SDK/Code Examples/: ST7735R.c  can.c  ws2812.c
Defcon SDK/doc/Native SDK/STM32F205RE/: STM32F205RE.ebp  STM32F205RE.elay  stm32f205re_flash.ld  stm32f205re_sram.ld
Defcon SDK/doc/Native SDK/STM32F205RE/inc/: stm32f2xx.h
Defcon SDK/doc/Native SDK/STM32F205RE/src/: main.c  startup_stm32f2xx.S  system_stm32f2xx.c
Defcon SDK/examples/: binary_tree.p  can_dongle.p  can_example.p  can_gateway.p  float_example.p  gpio_example.p  hello_world.p  host_example.p  led.p  state_example.p  timer_example.p
Defcon SDK/include/: console.inc  core.inc  default.inc  float.inc  graphics.inc  qcm_bdg.inc  string.inc
Defcon SDK/tools/: ImageCreate.pl  ImageCreate.txt
USB Driver Windows 7 x64/: QCM.inf
socketbadge/: CMakeLists.txt  README.md  can_socket.p  socketbadge.c
